--- a/index.html
+++ b/index.html
@@ -57,28 +57,28 @@
                 <div class="project-grid">
                     <div class="project-1">
                         <a href="https://v-prestigiacomo.github.io/html_css_reflection/" target="_blank" class="project-link">
-                            <img src="/img/p1.jpg" alt="project one image, clone of the netmatters website">
+                            <img src="img/p1.jpg" alt="project one image, clone of the netmatters website">
                             <p class="hover-text">A Reproduction of the NetMatters Home Page</p>
                             <p class="project-1-name">Project One</p>
                         </a>
                     </div>
                     <div class="project-2">
                         <a href="#" class="project-link">
-                            <img src="/img/unknown.jpg" alt="unknown project">
+                            <img src="img/unknown.jpg" alt="unknown project">
                             <p class="hover-text">Unknown Project</p>
                             <p>Project Two</p>
                         </a>
                     </div>
                     <div class="project-3">
                         <a href="#" class="project-link">
-                            <img src="/img/unknown.jpg" alt="unknown project">
+                            <img src="img/unknown.jpg" alt="unknown project">
                             <p class="hover-text">Unknown Project</p>
                             <p>Project Three</p>
                         </a>
                     </div>
                     <div class="project-4">
                         <a href="#" class="project-link">
-                            <img src="/img/unknown.jpg" alt="unknown project">
+                            <img src="img/unknown.jpg" alt="unknown project">
                             <p class="hover-text">Unknown Project</p>
                             <p>Project Four</p>
                         </a>
