--- a/code_examples.html
+++ b/code_examples.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="coming-soon-wrapper">
-                <img src="/img/coming-soon.png" alt="Coming soon sign">
+                <img src="img/coming-soon.png" alt="Coming soon sign">
             </div>
         </div>
     </body>
