--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 </div>
                 <div class="links-wrapper">
                     <ul>
-                        <a href="/about_me.html"><li>About Me</li></a>
-                        <a href="/#projects"><li>My Portfolio</li></a>
-                        <a href="/code_examples.html"><li>Coding Examples</li></a>
-                        <a href="/scs.html"><li>SCSB Scheme</li></a>
+                        <a href="about_me.html"><li>About Me</li></a>
+                        <a href="#projects"><li>My Portfolio</li></a>
+                        <a href="code_examples.html"><li>Coding Examples</li></a>
+                        <a href="scs.html"><li>SCSB Scheme</li></a>
                         <a href="#contact"><li>Contact Me</li></a>
                     </ul>
                 </div>
