--- a/about_me.html
+++ b/about_me.html
@@ -19,7 +19,7 @@
             </div>
             <div class="nav-wrapper">
                 <div class="initial-wrapper">
-                    <a href="/index.html"><p>VP</p></a>
+                    <a href="index.html"><p>VP</p></a>
                 </div>
                 <div class="links-wrapper">
                     <ul>
