--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="nav-wrapper">
                 <div class="initial-wrapper">
-                    <a href="/index.html"><p>VP</p></a>
+                    <a href="index.html"><p>VP</p></a>
                 </div>
                 <div class="links-wrapper">
                     <ul>
