adjustments to responsive behaviour

--- a/about_me.html
+++ b/about_me.html
@@ -17,6 +17,9 @@
                     <h1>About Me</h1>
                 </div>
             </div>
+            <div class="hamburger">
+                <i class="fa-solid fa-bars"></i>
+            </div>
             <div class="nav-wrapper">
                 <div class="initial-wrapper">
                     <a href="index.html"><p>VP</p></a>
@@ -32,12 +35,12 @@
                 </div>
                 <div class="social-wrapper">
                     <div class="github">
-                        <a href="https://github.com/v-prestigiacomo" class="github-link">
+                        <a href="https://github.com/v-prestigiacomo" target="_blank" class="github-link">
                             <i class="fa-brands fa-github"></i>
                         </a>
                     </div>
                     <div class="linkedin">
-                        <a href="https://www.linkedin.com/in/vincenzo-prestigiacomo-5b11a7209/" class="linkedin-link">
+                        <a href="https://www.linkedin.com/in/vincenzo-prestigiacomo-5b11a7209/" target="_blank" class="linkedin-link">
                         <i class="fa-brands fa-linkedin-in"></i>
                         </a>
                     </div>
