--- a/scs.html
+++ b/scs.html
@@ -17,6 +17,9 @@
                     <h1>SCS Scheme</h1>
                 </div>
             </div>
+            <div class="hamburger">
+                <i class="fa-solid fa-bars"></i>
+            </div>
             <div class="nav-wrapper">
                 <div class="initial-wrapper">
                     <a href="index.html"><p>VP</p></a>
