--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                 </div>
                 <div class="social-wrapper">
                     <div class="github">
-                        <a href="https://github.com/v-prestigiacomo" class="github-link">
+                        <a href="https://github.com/v-prestigiacomo" target="_blank" class="github-link">
                             <i class="fa-brands fa-github"></i>
                         </a>
                     </div>
                     <div class="linkedin">
-                        <a href="https://www.linkedin.com/in/vincenzo-prestigiacomo-5b11a7209/" class="linkedin-link">
+                        <a href="https://www.linkedin.com/in/vincenzo-prestigiacomo-5b11a7209/" target="_blank" class="linkedin-link">
                         <i class="fa-brands fa-linkedin-in"></i>
                         </a>
                     </div>
