adjustments to responsive behaviour

--- a/about_me.html
+++ b/about_me.html
@@ -47,6 +47,9 @@
                 </div>
             </div>
             <div class="main-wrapper">
+                <div class="portrait">
+                    <img src="img/portrait.jpg">
+                </div>
                 <p>I have been fascinated with technology from a very young age. Ever since 
                     I got my first desktop computer it quickly became my favorite possession.
                      Since getting my first PC I have taken an interest in video games, 
