made minor adjustments as per feedback

--- a/about_me.html
+++ b/about_me.html
@@ -62,12 +62,15 @@
                      on behalf of the composer. This combined with my recently new found interest 
                      in computer programming opened up an entire world of creative possibilities 
                      and ever since I have had quite the reverence for programming.</p>
-                    <p>Fast forward to now, I am currently studying with NetMatters on their Skills
-                         Bootcamp which covers: HTML, CSS, JavaScript, SQL, PHP and Laravel and I am
-                          looking forward to learning more as time progresses.</p>
-                    <p>I am strongly motivated to continue learning as a developer as I would very much 
-                        like to be able to create my own music software in the future which I imagine will 
-                        take me beyond the web based languages I am currently studying.</p>
+                <p>Fast forward to now, I am currently studying with NetMatters on their Skills
+                        Bootcamp which covers: HTML, CSS, JavaScript, SQL, PHP and Laravel and I am
+                        looking forward to learning more as time progresses.</p>
+                <p>I am strongly motivated to continue learning as a developer as I would very much 
+                    like to be able to create my own music software in the future which I imagine will 
+                    take me beyond the web based languages I am currently studying.</p>
+            </div>
+            <div class="footer">
+                <p>Created by Vincenzo Prestigiacomo</p>
             </div>
         </div>
     </body>
