--- a/code_examples.html
+++ b/code_examples.html
@@ -49,5 +49,8 @@
             <div class="coming-soon-wrapper">
                 <img src="img/coming-soon.png" alt="Coming soon sign">
             </div>
+            <div class="footer">
+                <p>Created by Vincenzo Prestigiacomo</p>
+            </div>
         </div>
     </body>
