--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                 
                 </form>
             </div>
+            <div class="footer">
+                <p>Created by Vincenzo Prestigiacomo</p>
+            </div>
         </div>
         
     </body>
