--- a/scs.html
+++ b/scs.html
@@ -73,7 +73,9 @@
                     Digital Marketing, Website & Software development & IT Support<br>
                     Broad spectrum of clients, working nationwide<br>
                     Operate to strict company values</p>
-
+            </div>
+            <div class="footer">
+                <p>Created by Vincenzo Prestigiacomo</p>
             </div>
         </div>
     </body>
