--- a/scs.html
+++ b/scs.html
@@ -17,12 +17,13 @@
                     <h1>SCS Scheme</h1>
                 </div>
             </div>
-            <div class="hamburger">
+            <div class="hamburger" onclick="openNav()">
                 <i class="fa-solid fa-bars"></i>
             </div>
-            <div class="nav-wrapper">
+            <div class="nav-wrapper" id="mySidenav">
                 <div class="initial-wrapper">
                     <a href="index.html"><p>VP</p></a>
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 </div>
                 <div class="links-wrapper">
                     <ul>
@@ -78,4 +79,6 @@
                 <p>Created by Vincenzo Prestigiacomo</p>
             </div>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+        <script src="js/main.js"></script>
     </body>
