fixed form validation and added code examples

--- a/code_examples.html
+++ b/code_examples.html
@@ -47,8 +47,14 @@
                     </div>
                 </div>
             </div>
-            <div class="coming-soon-wrapper">
-                <img src="img/coming-soon.png" alt="Coming soon sign">
+            <div class="main-wrapper">
+                <div class="code">
+                    <h2>Form input validation function (JavaScript)</h2>
+                    <a href="img/code1.png" target="_blank">
+                        <img src="img/code1.png">
+                    </a>
+                    <p>This function returns true if the string length is between the min-max values and is not left blank, otherwise it generates a relavent error message</p>
+                </div>
             </div>
             <div class="footer">
                 <p>Created by Vincenzo Prestigiacomo</p>
