--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 </div>
             </div>
             <div class="projects-wrapper" id="projects">
+                <h2>Projects</h2>
                 <div class="project-grid">
                     <div class="project-1">
                         <a href="http://netmatters.vincenzo-prestigiacomo.netmatters-scs.co.uk/" target="_blank" class="project-link">
@@ -86,7 +87,8 @@
                 </div>
             </div>
             <div class="contact-wrapper" id="contact">
-                <form name="contactForm">
+                <h2>Contact</h2>
+                <form name="contactForm" id="form">
 
                     <label for="fname">First Name</label>
                     <div class="form-field">                        
