made some minor changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="wrapper">
-            <div class="header-wrapper">
+            <div class="header-wrapper" id="header">
                 <div class="header-text">
                     <h1 class="txt1"></h1>
                 </div>
@@ -119,9 +119,16 @@
                         <textarea id="message" name="message" placeholder="Write something.." style="height:200px"></textarea>
                         <small></small>
                     </div>
-
-                        <input type="submit" value="Submit">                
+                    <div class="submit-btn">
+                        <input type="submit" value="Submit">    
+                    </div>            
                 </form>
+            </div>
+            <div class="scroll-wrapper-bottom">
+                <a href="#header">
+                    <i class="fa-solid fa-arrow-up"></i>
+                    <p>Scroll Up</p>
+                </a>
             </div>
             <div class="footer">
                 <p>Created by Vincenzo Prestigiacomo</p>
