made adjustments to the project cards and the contact form

--- a/index.html
+++ b/index.html
@@ -59,30 +59,74 @@
                     <div class="project-1">
                         <a href="http://netmatters.vincenzo-prestigiacomo.netmatters-scs.co.uk/" target="_blank" class="project-link">
                             <img src="img/p1.jpg" alt="project one image, clone of the netmatters website">
-                            <p class="hover-text">A Reproduction of the NetMatters Home Page</p>
-                            <p class="project-1-name">Project One</p>
                         </a>
+                            <p class="project-1-name">A Reproduction of the Netmatters Home Page making use of HTML5 and SASS</p>
+                        <div class="project-links">
+                            <a href="http://netmatters.vincenzo-prestigiacomo.netmatters-scs.co.uk/" target="_blank">
+                                <div class="project-view">
+                                    <p>View</p>
+                                </div>
+                            </a>
+                            <a href="https://github.com/v-prestigiacomo/html_css_reflection" target="_blank">
+                                <div class="project-git">
+                                    <p>Git</p>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                     <div class="project-2">
                         <a href="#" class="project-link">
                             <img src="img/unknown.jpg" alt="unknown project">
-                            <p class="hover-text">Unknown Project</p>
-                            <p>Project Two</p>
                         </a>
+                            <p class="project-2-name">Javascript Array Reflection - Not Started</p>
+                        <div class="project-links">
+                            <a href="http://netmatters.vincenzo-prestigiacomo.netmatters-scs.co.uk/" target="_blank">
+                                <div class="project-view">
+                                    <p>View</p>
+                                </div>
+                            </a>
+                            <a href="https://github.com/v-prestigiacomo/html_css_reflection" target="_blank">
+                                <div class="project-git">
+                                    <p>Git</p>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                     <div class="project-3">
                         <a href="#" class="project-link">
                             <img src="img/unknown.jpg" alt="unknown project">
-                            <p class="hover-text">Unknown Project</p>
-                            <p>Project Three</p>
                         </a>
+                            <p class="project-3-name">PHP Reflection - Not Started</p>
+                        <div class="project-links">
+                            <a href="http://netmatters.vincenzo-prestigiacomo.netmatters-scs.co.uk/" target="_blank">
+                                <div class="project-view">
+                                    <p>View</p>
+                                </div>
+                            </a>
+                            <a href="https://github.com/v-prestigiacomo/html_css_reflection" target="_blank">
+                                <div class="project-git">
+                                    <p>Git</p>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                     <div class="project-4">
                         <a href="#" class="project-link">
                             <img src="img/unknown.jpg" alt="unknown project">
-                            <p class="hover-text">Unknown Project</p>
-                            <p>Project Four</p>
                         </a>
+                        <p class="project-4-name">Laravel Reflection - Not Started</p>
+                        <div class="project-links">
+                            <a href="http://netmatters.vincenzo-prestigiacomo.netmatters-scs.co.uk/" target="_blank">
+                                <div class="project-view">
+                                    <p>View</p>
+                                </div>
+                            </a>
+                            <a href="https://github.com/v-prestigiacomo/html_css_reflection" target="_blank">
+                                <div class="project-git">
+                                    <p>Git</p>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
