fixed html for the side nav links

--- a/about_me.html
+++ b/about_me.html
@@ -27,11 +27,11 @@
                 </div>
                 <div class="links-wrapper">
                     <ul>
-                        <a href="about_me.html"><li>About Me</li></a>
-                        <a href="index.html#projects"><li>My Portfolio</li></a>
-                        <a href="code_examples.html"><li>Coding Examples</li></a>
-                        <a href="scs.html"><li>SCSB Scheme</li></a>
-                        <a href="index.html#contact"><li>Contact Me</li></a>
+                        <li><a href="about_me.html">About Me</a></li>
+                        <li><a href="index.html#projects">My Portfolio</a></li>
+                        <li><a href="code_examples.html">Coding Examples</a></li>
+                        <li><a href="scs.html">SCSB Scheme</a></li>
+                        <li><a href="index.html#contact">Contact Me</a></li>
                     </ul>
                 </div>
                 <div class="social-wrapper">
