fixed remaining validator errors

--- a/about_me.html
+++ b/about_me.html
@@ -53,7 +53,7 @@
             </div>
             <div class="main-wrapper">
                 <div class="portrait">
-                    <img src="img/portrait.jpg">
+                    <img src="img/portrait.jpg" alt="A picture of Vincenzo Prestigiacomo">
                 </div>
                 <p>I have been fascinated with technology from a very young age. Ever since 
                     I got my first desktop computer it quickly became my favorite possession.
