--- a/scs.html
+++ b/scs.html
@@ -68,7 +68,7 @@
                      allowing them to track their progress and see how much they?ve covered in certain areas.
                 </p>
                 <p><strong>Total Score: 5096</strong><br>
-                <a href="https://teamtreehouse.com/profiles/vincenzoprestigiacomo2" target="_blank"><strong>Treehouse Profile</strong></p></a>
+                <a href="https://teamtreehouse.com/profiles/vincenzoprestigiacomo2" target="_blank"><strong>Treehouse Profile</strong></a>
                 <h2>About Netmatters</h2>
                 <p class="about-nm">Established in 2008<br>
                     Norfolk's leading technology company<br>
