--- a/code_examples.html
+++ b/code_examples.html
@@ -55,7 +55,7 @@
                 <div class="code">
                     <h2>Form input validation function (JavaScript)</h2>
                     <a href="img/code1.png" target="_blank">
-                        <img src="img/code1.png" target="blank">
+                        <img src="img/code1.png" alt="An input validation function">
                     </a>
                     <p>This function returns true if the string length is between the min-max values and is not left blank, otherwise it generates a relavent error message</p>
                 </div>
